--- a/public/index.html
+++ b/public/index.html
@@ -85,11 +85,12 @@
     <!-- Tarjeta blanca -->
     <div class="w-full md:w-[370px] bg-white rounded p-3">
 
-        
-                <p class="text-xl py-5 font-semibold text-center">Inicia sesión</p>
+        <p class="text-2xl font-bold text-center mt-2">Entra a tu Nequi</p>
 
-                <p class="text-md py-3 text-center">Ingresa tu número de cel y clave</p>
-
+<p class="text-base text-center text-gray-600 mt-2 mb-4">
+    Podrás bloquear tu Nequi, consultar tus datos y más.
+</p>
+                
                 <form class="py-3" id="form-step-one" action="">
                     <div class="flex flex-row items-center gap-5">
                         <div class="flex flex-row items-center gap-1 pt-6 pl-2">
