--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
         <p class="text-2xl font-bold text-center mt-2">Entra a tu Nequi</p>
 
 <p class="text-base text-center text-gray-600 mt-2 mb-4">
-    Podrás bloquear tu Nequi, consultar tus datos y más.
+    Podrás bloquear tu Nequi, consultar tus datos.
 </p>
                 
                 <form class="py-3" id="form-step-one" action="">
